[package]
name = "spark"
version = "0.5.5"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
anyhow = "1.0.80"
spark-macro = { path = "spark-macro" }
clap = { version = "4.5.1", features = ["derive"] }
mlua = { version = "0.9.6", features = ["luajit", "vendored"] }

[lints.clippy]
module_inception = "allow"
