[package]
name = "spark"
version = "0.6.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
mlua = { version = "0.10.3", features = ["luajit", "vendored"] }
