[package]
name = "plaza"
version = "0.7.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
hashbrown = "0.16.0"
mlua = { version = "0.11.3", features = ["luajit", "vendored"] }
